# morphene

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md
contrib/: config-for-ahnode.ini  config-for-broadcaster.ini  config-for-docker.ini  fullnode.config.ini  fullnode.opswhitelist.config.ini  morphened.run  morphenedentrypoint.sh  paas-sv-run.sh  pulltestnetscripts.sh  startpaasmorphened.sh  sync-sv-run.sh
doc/: building.md  example_config.ini  exchange_quickstart.md  quickstart.md  seednodes.txt  witness_parameters.md
doc/devs/: 2018-08-20-resource-notes.md  api-notes.md  create-operation.md  plugin.md  sqrt.md  testing.md
libraries/appbase/: application.cpp
libraries/chain/: CMakeLists.txt  block_log.cpp  database.cpp  fork_database.cpp  generic_custom_operation_interpreter.cpp  morphene_evaluator.cpp  morphene_objects.cpp  shared_authority.cpp  transaction_object.cpp  witness_schedule.cpp
libraries/chain/include/morphene/chain/: account_object.hpp  block_log.hpp  block_summary_object.hpp  buffer_type.hpp  compound.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  morphene_evaluator.hpp  morphene_object_types.hpp  morphene_objects.hpp  node_property_object.hpp  notifications.hpp  schema_types.hpp  shared_authority.hpp  shared_db_merkle.hpp  transaction_notification.hpp  transaction_object.hpp  witness_objects.hpp  witness_schedule.hpp
libraries/chain/include/morphene/chain/schema_types/: oid.hpp
libraries/chain/include/morphene/chain/util/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  manabar.hpp  rd_dynamics.hpp  rd_setup.hpp  reward.hpp  signal.hpp  uint256.hpp
libraries/chain/util/: advanced_benchmark_dumper.cpp  impacted.cpp  rd.cpp  reward.cpp
libraries/jsonball/: CMakeLists.txt
libraries/legacy_plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/account_statistics/include/morphene/account_statistics/: account_statistics_api.hpp  account_statistics_plugin.hpp
libraries/legacy_plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp  plugin.json
libraries/legacy_plugins/auth_util/include/morphene/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/legacy_plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/legacy_plugins/block_info/include/morphene/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/legacy_plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/blockchain_statistics/include/morphene/blockchain_statistics/: blockchain_statistics_api.hpp  blockchain_statistics_plugin.hpp
libraries/legacy_plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  plugin.json
libraries/legacy_plugins/delayed_node/include/morphene/delayed_node/: delayed_node_plugin.hpp
libraries/legacy_plugins/private_message/: CMakeLists.txt  plugin.json  private_message_plugin.cpp
libraries/legacy_plugins/private_message/include/morphene/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/legacy_plugins/raw_block/: CMakeLists.txt  plugin.json  raw_block_api.cpp  raw_block_plugin.cpp
libraries/legacy_plugins/raw_block/include/morphene/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/manifest/: CMakeLists.txt
libraries/net/: CMakeLists.txt  node.cpp  peer_connection.cpp
libraries/plugins/account_by_key/: CMakeLists.txt  account_by_key_plugin.cpp
libraries/plugins/chain/: CMakeLists.txt  (+1 more)
libraries/protocol/: CMakeLists.txt  asset.cpp  authority.cpp  block.cpp  get_config.cpp  morphene_operations.cpp  operations.cpp  schema_types.cpp  sign_state.cpp  transaction.cpp  types.cpp  version.cpp
libraries/protocol/hardfork.d/: 0-preamble.hf  0_1.hf  0_2.hf
libraries/protocol/include/morphene/protocol/: asset.hpp  asset_symbol.hpp  authority.hpp  base.hpp  block.hpp  block_header.hpp  config.hpp  exceptions.hpp  fixed_string.hpp  get_config.hpp  legacy_asset.hpp  misc_utilities.hpp  morphene_operations.hpp  morphene_virtual_operations.hpp  operation_util.hpp  operation_util_impl.hpp  operations.hpp  protocol.hpp  schema_types.hpp  sign_state.hpp  transaction.hpp  transaction_util.hpp  types.hpp  types_fwd.hpp  validation.hpp  version.hpp
libraries/protocol/include/morphene/protocol/schema_types/: account_name_type.hpp  asset_symbol_type.hpp  fixed_string.hpp
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/schema/include/morphene/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/include/morphene/schema/schema_types/: flat_map.hpp  flat_set.hpp  pair.hpp  static_variant.hpp  vector.hpp
libraries/utilities/: CMakeLists.txt  benchmark_dumper.cpp  git_revision.cpp.in  key_conversion.cpp  logging_config.cpp  string_escape.cpp  tempdir.cpp  words.cpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  remote_node_api.cpp  wallet.cpp
programs/: CMakeLists.txt
programs/build_helpers/: configure_build.py  get_config_check.sh
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/morphened/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/util/: CMakeLists.txt  dump_morphene_schema.cpp  get_dev_key.cpp  inflation_model.cpp  inflation_plot.py  newplugin.py  object_size.py  schema_test.cpp  serialize_set_properties.cpp  sign_digest.cpp  sign_transaction.cpp  test_block_log.cpp  test_fixed_string.cpp  test_shared_mem.cpp
tests/db_fixture/: database_fixture.cpp  database_fixture.hpp
(+129 files in other folders)
